--- a/service-discovery/helloworld-db.yml
+++ b/service-discovery/helloworld-db.yml
@@ -20,10 +20,11 @@ spec:
         - name: nodejs-port
           containerPort: 3000
         env:
-          - name: MYSQL_HOST
-            value: database-service
-          - name: MYSQL_USER
-            value: root
+        #https://dev.mysql.com/doc/refman/5.7/en/environment-variables.html
+          - name: MYSQL_HOST                                      # connect to db svc of database-svc create for mysql svc
+            value: database-service 
+          - name: MYSQL_USER                                      # create user and password assign and isntall db name as database ( helloworld)
+            value: root 
           - name: MYSQL_PASSWORD
             valueFrom:
               secretKeyRef:
