--- a/volumes/helloworld-with-volume.yml
+++ b/volumes/helloworld-with-volume.yml
@@ -25,3 +25,6 @@ spec:
       - name: myvolume
         awsElasticBlockStore:
           volumeID: # insert AWS EBS volumeID here
+       #persistentVolumeClaim:
+       #  claimName: volume-claim
+        
